[project]
name = "bmi_era5"
requires-python = ">=3.10"
description = "BMI implementation for ERA5 data https://confluence.ecmwf.int/display/CKB/ERA5"
keywords = [
    "BMI",
    "Basic Model Interface",
    "ERA5",
]
authors = [
    { name = "Tian Gan", email = "jamy127@foxmail.com" },
]
maintainers = [
    { name = "Tian Gan", email = "jamy127@foxmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "bmipy",
    "netcdf4",
    "numpy",
    "pyyaml",
    "requests",
    "xarray",
    "cdsapi >= 0.7.2",
    "cftime",
]
dynamic = [
    "version",
    "readme",
]

[project.license]
text = "MIT"

[project.urls]
documentation = "https://github.com/gantian127/bmi_era5"
homepage = "https://github.com/gantian127/bmi_era5"
repository = "https://github.com/gantian127/bmi_era5"

[project.optional-dependencies]
dev = [
    "nox",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "numpy",
]
testing = [
    "nbmake",
    "pytest",
    "pytest-cov",
    "setuptools",
]

[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.version]
attr = "bmi_era5._version.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/bmi_era5",
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
]
addopts = [
    "--ignore=setup.py",
    "--tb=native",
    "--durations=16",
    "--strict-markers",
    "--doctest-modules",
    "-vvv",
]

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "src/bmi_era5/_version.py"
